Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/index.html
@@ -100,6 +100,7 @@
 
       class Menu {
         handleEvent(e) {
+          // mousedown -> onMousedown
           const method = "on" + e.type[0].toUpperCase() + e.type.slice(1);
           this[method](e);
         }
