Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/hide-on-click.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/hide-on-click.html
@@ -10,7 +10,8 @@
 
     <script>
       document.querySelector("#hider").onclick = function () {
-        document.querySelector("#text").style.display = "none";
+        // document.querySelector("#text").style.display = "none";
+        document.querySelector("#text").hidden = true;
       };
     </script>
   </body>
