Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/which-handlers-run.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/which-handlers-run.html
@@ -6,13 +6,13 @@
       value="Click me!"
     />
     <script>
+      function handler() {
+        alert("1");
+      }
+
       const button = document.querySelector("input");
-      button.addEventListener("click", function () {
-        alert("1");
-      });
-      button.removeEventListener("click", function () {
-        alert("1");
-      });
+      button.addEventListener("click", handler);
+      button.removeEventListener("click", handler);
 
       button.onclick = function () {
         alert("2");
