--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/move-the-ball-across-the-field.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/move-the-ball-across-the-field.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <style>
+      body {
+        height: 2000px;
+      }
+
       #field {
         width: 200px;
         height: 150px;
@@ -14,6 +18,10 @@
 
       #ball {
         position: absolute;
+        left: 0;
+        top: 0;
+        width: 40px;
+        height: 40px;
       }
     </style>
   </head>
