Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/move-the-ball-across-the-field.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/move-the-ball-across-the-field.html
@@ -40,7 +40,9 @@
     </div>
 
     <script>
-      console.log("ola");
+      document.getElementById("field").onclick = function (e) {
+        console.log(e.clientX, e.clientY);
+      };
     </script>
   </body>
 </html>
