Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/move-the-ball-across-the-field-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/move-the-ball-across-the-field-2.html
@@ -45,7 +45,7 @@
       const ball = document.querySelector("#ball");
 
       field.onclick = function (e) {
-        const fieldCoords = this.getBoundingClientRect();
+        const fieldCoords = e.currentTarget.getBoundingClientRect();
 
         const ballCoords = {
           top:
