Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
@@ -2,13 +2,20 @@
 <html>
   <head>
     <style>
-      div {
+      /* div {
         cursor: pointer;
-      }
+      } */
     </style>
   </head>
   <body>
-    <div>▶ Sweeties (click me)!</div>
+    <div
+      id="sweeties"
+      class="menu"
+    >
+      <span class="title">Sweeties (click me)!</span>
+    </div>
+
+    <!-- <div>▶ Sweeties (click me)!</div>
     <ul hidden>
       <li>Cake</li>
       <li>Donut</li>
@@ -27,8 +34,6 @@
           div.innerHTML = "▼ Sweeties (click me)!";
         }
       };
-
-      console.log(div);
-    </script>
+    </script> -->
   </body>
 </html>
