Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
@@ -8,6 +8,11 @@
         padding-left: 20px;
         display: none;
       }
+
+      .menu .title {
+        font-size: 18px;
+        cursor: pointer;
+      }
       /* div {
         cursor: pointer;
       } */
