Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
@@ -13,6 +13,12 @@
         font-size: 18px;
         cursor: pointer;
       }
+
+      .menu .title::before {
+        content: "▶ ";
+        font-size: 80%;
+        color: green;
+      }
       /* div {
         cursor: pointer;
       } */
