Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
@@ -46,7 +46,8 @@
     </div>
 
     <script>
-      console.log("ola");
+      const span = document.querySelector("span");
+      console.log(span);
     </script>
 
     <!-- <div>▶ Sweeties (click me)!</div>
