--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/create-a-sliding-menu.html
@@ -25,7 +25,7 @@
       }
 
       .menu.open ul {
-        display: "";
+        display: block;
       }
       /* div {
         cursor: pointer;
@@ -47,7 +47,11 @@
 
     <script>
       const span = document.querySelector("span");
-      console.log(span);
+      const menu = document.getElementById("sweeties");
+
+      span.onclick = function () {
+        menu.classList.toggle("open");
+      };
     </script>
 
     <!-- <div>▶ Sweeties (click me)!</div>
