Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      body {
+        width: 470px;
+        margin: 10px auto;
+      }
+    </style>
+  </head>
   <body>
+    The button code (may need to adjust CSS):
+    <button class="remove-button">[x]</button>
     <script>
       console.log("ola");
     </script>
