Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
@@ -6,6 +6,17 @@
         width: 470px;
         margin: 10px auto;
       }
+
+      .remove-button {
+        font-size: 110%;
+        color: darkred;
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        height: 24px;
+        width: 24px;
+        right: 10px;
+      }
     </style>
   </head>
   <body>
