Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
@@ -7,6 +7,12 @@
         margin: 10px auto;
       }
 
+      h3 {
+        margin: 0;
+        padding-bottom: 0.3em;
+        font-size: 1.1em;
+      }
+
       .pane {
         background-color: #edf5e1;
         padding: 10px 20px 10px;
