--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
@@ -13,6 +13,11 @@
         font-size: 1.1em;
       }
 
+      p {
+        margin: 0;
+        padding: 0 0 0.5em;
+      }
+
       .pane {
         background-color: #edf5e1;
         padding: 10px 20px 10px;
