Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button.html
@@ -76,8 +76,14 @@
         </p>
       </div>
     </div>
+
     <script>
-      console.log("ola");
+      document.querySelectorAll(".remove-button").forEach(function (button) {
+        button.onclick = function (e) {
+          const parent = button.closest(".pane");
+          parent.hidden = true;
+        };
+      });
     </script>
   </body>
 </html>
