Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      body {
+        margin: 10px auto;
+        width: 470px;
+      }
+
+      .remove-button {
+        color: darkred;
+        font-size: 110%;
+        background-color: transparent;
+        right: 10px;
+        width: 24px;
+        height: 24px;
+        cursor: pointer;
+        border: none;
+      }
+    </style>
+  </head>
   <body>
+    The button code (may need to adjust CSS):
+    <button class="remove-button">[x]</button>
+
     <script>
       console.log("ola, tudo bem?");
     </script>
