--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
@@ -23,6 +23,19 @@
     The button code (may need to adjust CSS):
     <button class="remove-button">[x]</button>
 
+    <div>
+      <div class="pane">
+        <h3>Horse</h3>
+        <p>
+          The horse is one of two extant subspecies of Equus ferus. It is an
+          odd-toed ungulate mammal belonging to the taxonomic family Equidae.
+          The horse has evolved over the past 45 to 55 million years from a
+          small multi-toed creature, Eohippus, into the large, single-toed
+          animal of today.
+        </p>
+      </div>
+    </div>
+
     <script>
       console.log("ola, tudo bem?");
     </script>
