Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
@@ -7,6 +7,12 @@
         width: 470px;
       }
 
+      .pane {
+        background-color: #edf5e1;
+        padding: 10px 20px 10px;
+        border-top: 2px solid #c4df9b;
+      }
+
       .remove-button {
         color: darkred;
         font-size: 110%;
