Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
@@ -7,6 +7,17 @@
         width: 470px;
       }
 
+      h3 {
+        margin: 0;
+        padding-bottom: 0.3em;
+        font-size: 1.1em;
+      }
+
+      p {
+        margin: 0;
+        padding: 0 0 0.5em;
+      }
+
       .pane {
         background-color: #edf5e1;
         padding: 10px 20px 10px;
