--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
@@ -22,6 +22,7 @@
         background-color: #edf5e1;
         padding: 10px 20px 10px;
         border-top: 2px solid #c4df9b;
+        position: relative;
       }
 
       .remove-button {
@@ -33,15 +34,14 @@
         height: 24px;
         cursor: pointer;
         border: none;
+        position: absolute;
       }
     </style>
   </head>
   <body>
-    The button code (may need to adjust CSS):
-    <button class="remove-button">[x]</button>
-
     <div>
       <div class="pane">
+        <button class="remove-button">[x]</button>
         <h3>Horse</h3>
         <p>
           The horse is one of two extant subspecies of Equus ferus. It is an
@@ -49,6 +49,16 @@
           The horse has evolved over the past 45 to 55 million years from a
           small multi-toed creature, Eohippus, into the large, single-toed
           animal of today.
+        </p>
+      </div>
+      <div class="pane">
+        <button class="remove-button">[x]</button>
+        <h3>Donkey</h3>
+        <p>
+          The donkey or ass (Equus africanus asinus) is a domesticated member of
+          the horse family, Equidae. The wild ancestor of the donkey is the
+          African wild ass, E. africanus. The donkey has been used as a working
+          animal for at least 5000 years.
         </p>
       </div>
     </div>
