Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
@@ -61,6 +61,16 @@
           animal for at least 5000 years.
         </p>
       </div>
+      <div class="pane">
+        <h3>Cat</h3>
+        <p>
+          The domestic cat (Latin: Felis catus) is a small, typically furry,
+          carnivorous mammal. They are often called house cats when kept as
+          indoor pets or simply cats when there is no need to distinguish them
+          from other felids and felines. Cats are often valued by humans for
+          companionship and for their ability to hunt vermin.
+        </p>
+      </div>
     </div>
 
     <script>
