Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/intro-to-browser-events/tasks/add-a-closing-button-2.html
@@ -79,6 +79,10 @@
           "afterbegin",
           '<button class="remove-button">[x]</button>'
         );
+
+        pane.firstChild.onclick = function () {
+          pane.remove();
+        };
       });
     </script>
   </body>
