--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -4,6 +4,7 @@
     <style>
       body * {
         border: 1px solid blue;
+        margin: 10px;
       }
     </style>
   </head>
@@ -15,8 +16,12 @@
       >
     </div>
 
-    <script>
-      console.log("ola");
-    </script>
+    <form onclick="alert('form')">
+      Form
+      <div onclick="alert('div')">
+        Div
+        <p onclick="alert('p')">P</p>
+      </div>
+    </form>
   </body>
 </html>
