Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -12,6 +12,14 @@
     A click shows both <code>event.target</code> and <code>this</code> to
     compare.
 
+    <form id="form">
+      FORM
+      <div>
+        DIV
+        <p>P</p>
+      </div>
+    </form>
+
     <!-- <div onclick="alert('The handler!')">
       <em
         >If you click on <code>EM</code>, the handler on
