Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -20,6 +20,10 @@
       </div>
     </form>
 
+    <script>
+      console.log("Ola tudo bem");
+    </script>
+
     <!-- <div onclick="alert('The handler!')">
       <em
         >If you click on <code>EM</code>, the handler on
