Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -6,6 +6,12 @@
         border: 1px solid blue;
         margin: 10px;
       } */
+      form {
+        background-color: green;
+        position: relative;
+        width: 150px;
+        height: 150px;
+      }
     </style>
   </head>
   <body>
