Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -11,6 +11,8 @@
         position: relative;
         width: 150px;
         height: 150px;
+        text-align: center;
+        cursor: pointer;
       }
     </style>
   </head>
