Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -14,6 +14,15 @@
         text-align: center;
         cursor: pointer;
       }
+
+      div {
+        background-color: blue;
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        width: 100px;
+        height: 100px;
+      }
     </style>
   </head>
   <body>
