Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -34,6 +34,11 @@
         line-height: 50px;
         margin: 0;
       }
+
+      body {
+        line-height: 25px;
+        font-size: 16px;
+      }
     </style>
   </head>
   <body>
