--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -54,7 +54,8 @@
     </form>
 
     <script>
-      console.log("Ola tudo bem");
+      const form = document.querySelector("form");
+      console.log(form);
     </script>
 
     <!-- <div onclick="alert('The handler!')">
