Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -55,7 +55,10 @@
 
     <script>
       const form = document.querySelector("form");
-      console.log(form);
+
+      form.onclick = function (event) {
+        console.log(event);
+      };
     </script>
 
     <!-- <div onclick="alert('The handler!')">
