Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -57,7 +57,11 @@
       const form = document.querySelector("form");
 
       form.onclick = function (event) {
-        console.log(event);
+        event.target.style.backgroundColor = "yellow";
+
+        setTimeout(function () {
+          event.target.style.backgroundColor = "";
+        }, 1000);
       };
     </script>
 
