Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -60,6 +60,8 @@
         event.target.style.backgroundColor = "yellow";
 
         setTimeout(function () {
+          console.log("Target = " + event.target.tagName);
+          console.log("This = " + this.tagName);
           event.target.style.backgroundColor = "";
         }, 1000);
       };
