--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -59,7 +59,7 @@
       form.onclick = function (event) {
         event.target.style.backgroundColor = "yellow";
 
-        setTimeout(function () {
+        setTimeout(() => {
           console.log("Target = " + event.target.tagName);
           console.log("This = " + this.tagName);
           event.target.style.backgroundColor = "";
