Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -58,10 +58,12 @@
 
       form.onclick = function (event) {
         event.target.style.backgroundColor = "yellow";
+        const currentTarget = event.currentTarget.tagName;
 
         setTimeout(() => {
           console.log("Target = " + event.target.tagName);
           console.log("This = " + this.tagName);
+          console.log("This = " + currentTarget);
           event.target.style.backgroundColor = "";
         }, 1000);
       };
