Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -41,7 +41,7 @@
       }
     </style>
   </head>
-  <body>
+  <body onclick="console.log(`The bubbling doesn't reach here`)">
     A click shows both <code>event.target</code> and <code>this</code> to
     compare.
 
