Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/index.html
@@ -53,7 +53,21 @@
       </div>
     </form>
 
+    <div>
+      <button
+        type="button"
+        onclick="handleClick(event)"
+      >
+        Click me!
+      </button>
+    </div>
+
     <script>
+      function handleClick(e) {
+        console.log(e.type);
+        e.stopPropagation();
+      }
+
       const form = document.querySelector("form");
 
       form.onclick = function (event) {
