Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -4,6 +4,16 @@
     <style></style>
   </head>
   <body>
+    <h2>Click on the buttons</h2>
+
+    <div>
+      outer div <br />
+      <div>
+        middle div <br />
+        <div>inner div <br /></div>
+      </div>
+    </div>
+
     <script>
       console.log("stopImmediatePropagation");
     </script>
