Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -10,7 +10,10 @@
       outer div <br />
       <div>
         middle div <br />
-        <div>inner div <br /></div>
+        <div>
+          inner div <br />
+          <button>allow propagation</button> <br />
+        </div>
       </div>
     </div>
 
