Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -12,7 +12,13 @@
         middle div <br />
         <div>
           inner div <br />
-          <button>allow propagation</button> <br />
+          <button type="button">allow propagation</button> <br />
+          <button
+            type="button"
+            id="stop-propagation"
+          >
+            stop propagation
+          </button>
         </div>
       </div>
     </div>
