Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -19,6 +19,12 @@
           >
             stop propagation
           </button>
+          <button
+            type="button"
+            id="stop-immediate-propagation"
+          >
+            immediate stop propagation
+          </button>
         </div>
       </div>
     </div>
