Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -17,8 +17,8 @@
             type="button"
             id="stop-propagation"
           >
-            stop propagation
-          </button>
+            stop propagation</button
+          ><br />
           <button
             type="button"
             id="stop-immediate-propagation"
@@ -28,6 +28,8 @@
         </div>
       </div>
     </div>
+
+    <pre></pre>
 
     <script>
       console.log("stopImmediatePropagation");
