--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style></style>
+    <style>
+      div {
+        display: inline-block;
+        padding: 10px;
+        background-color: white;
+        border: 2px solid black;
+        margin: 10px;
+      }
+    </style>
   </head>
   <body>
     <h2>Click on the buttons</h2>
