--- a/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/bubbling-and-capturing/stop-immediate-propagation.html
@@ -9,6 +9,16 @@
         border: 2px solid black;
         margin: 10px;
       }
+
+      button {
+        width: 100px;
+        color: #008;
+        padding: 5px;
+        background-color: white;
+        border: 2px solid black;
+        border-radius: 30px;
+        margin: 10px;
+      }
     </style>
   </head>
   <body>
